# regex-pderiv

./: README.md  TODO.md  regex-pderiv.cabal  stack.yaml
Text/Regex/PDeriv/: Common.lhs  RE.lhs
Text/Regex/PDeriv/BitCode/: #Transduce.hs#  .#Transduce.hs  Bit.hs  Bit.hs~  ParseTree.hs  Transduce.hs
Text/Regex/PDeriv/ByteString/: LeftToRightP.lhs  LeftToRightP2.lhs  LeftToRightP3.lhs  LeftToRightP4.lhs  LeftToRightP5.lhs  LeftToRightP6.lhs  LeftToRightP7.lhs  LeftToRightS.lhs  Posix.lhs  RightToLeft.lhs  TwoPasses.lhs
Text/Regex/PDeriv/String/: LeftToRightD.lhs
agents/tasks-completed/: 2026-04-03_summary.md
benchmarks/bitc/: GenInput.hs  Test1.hs  Test2.hs  Test3.hs  Test4.hs
benchmarks/usaddress/: USAddressBC.lhs
example/: runRegex.hs
src/Text/Regex/PDeriv/: Dictionary.hs  RE.lhs
src/Text/Regex/PDeriv/BitCode/: Bit.hs  ParseTree.hs  ParseTree.hs~  Transduce.hs  Transduce.hs~
src/Text/Regex/PDeriv/ByteString/: LeftToRight.lhs  LeftToRightP.lhs  LeftToRightP2.lhs  LeftToRightP3.lhs  LeftToRightP6.lhs
test/: BitTest.hs
