Name:                   regex-pderiv
Version:                0.2.1
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2010-2023, Kenny Zhuo Ming Lu and Martin Sulzmann
Author:                 Kenny Zhuo Ming Lu and Martin Sulzmann
Maintainer:             luzhuomi@gmail.com, martin.sulzmann@gmail.com
Stability:              Beta
Homepage:               http://code.google.com/p/xhaskell-library/
Package-URL:            http://darcs.haskell.org/packages/regex-unstable/xhaskell-library
Synopsis:               Replaces/Enhances Text.Regex. Implementing regular expression matching using Antimirov's partial derivatives. 
Description:            Regex algorithm implementation using partial derivatives. The svn source also shipped with two other referential implementations, e.g. Thomspon NFA and Glushkov NFA. For more detail please check out http://code.google.com/p/xhaskell-library/
Category:               Text
Tested-With:            GHC
Build-Type:             Simple
Cabal-Version:          >= 1.8

flag base4


library 
  Build-Depends:        parsec, mtl, containers, bytestring, deepseq 
  Build-Depends:	parallel, regex-base
  -- Build-Depends:	bitset
  Build-Depends:         base >= 4.0 && < 5.0, ghc-prim
  Exposed-Modules:       Text.Regex.PDeriv.ByteString
                         Text.Regex.PDeriv.ByteString.TwoPasses
                         Text.Regex.PDeriv.ByteString.RightToLeft
                         Text.Regex.PDeriv.ByteString.LeftToRight
                         Text.Regex.PDeriv.ByteString.LeftToRightS
                         -- Text.Regex.PDeriv.ByteString.LeftToRightP
                         -- Text.Regex.PDeriv.ByteString.LeftToRightP2
                         -- Text.Regex.PDeriv.ByteString.LeftToRightP3
                         -- Text.Regex.PDeriv.ByteString.LeftToRightP4
                         -- Text.Regex.PDeriv.ByteString.LeftToRightP5
                         -- Text.Regex.PDeriv.ByteString.LeftToRightP6
                         -- Text.Regex.PDeriv.ByteString.LeftToRightP7
                         Text.Regex.PDeriv.ByteString.LeftToRightD
                         Text.Regex.PDeriv.ByteString.Posix
                         Text.Regex.PDeriv.BitCode.Bit
                         Text.Regex.PDeriv.BitCode.ParseTree
                         Text.Regex.PDeriv.BitCode.Transduce
                         Text.Regex.PDeriv.String
                         Text.Regex.PDeriv.String.LeftToRightD
                         Text.Regex.PDeriv.Common 
                         Text.Regex.PDeriv.Word
                         Text.Regex.PDeriv.ExtPattern
                         Text.Regex.PDeriv.IntPattern
                         Text.Regex.PDeriv.RE
                         Text.Regex.PDeriv.Parse		
                         Text.Regex.PDeriv.Translate
                         Text.Regex.PDeriv.Nfa			
                         Text.Regex.PDeriv.Pretty
                         Text.Regex.PDeriv.Dictionary
  Buildable:              True
  Extensions:             GADTs, MultiParamTypeClasses, FunctionalDependencies, FlexibleInstances, TypeSynonymInstances, FlexibleContexts
  GHC-Options:            -funbox-strict-fields
  GHC-Prof-Options:       -auto-all
  hs-source-dirs:  src

test-suite test_pderiv
  main-is:         BitTest.hs
  type:            exitcode-stdio-1.0
  Build-Depends:        parsec, mtl, containers, bytestring, deepseq 
  Build-Depends:	parallel, regex-base
  Build-Depends:        base >= 4.0 && < 5.0, ghc-prim
  Build-Depends:        HUnit, tasty, tasty-hunit
  Extensions:             GADTs, MultiParamTypeClasses, FunctionalDependencies, FlexibleInstances, TypeSynonymInstances, FlexibleContexts
  GHC-Options:            -threaded -funbox-strict-fields
  GHC-Prof-Options:       -auto-all  
  hs-source-dirs:  test, src
     
