cabal-version:          2.4
Name:                   regex-pderiv
Version:                0.2.1
License:                BSD-3-Clause
License-File:           LICENSE
Copyright:              Copyright (c) 2010-2026, Kenny Zhuo Ming Lu and Martin Sulzmann
Author:                 Kenny Zhuo Ming Lu and Martin Sulzmann
Maintainer:             luzhuomi@gmail.com, martin.sulzmann@gmail.com
Stability:              Beta
Homepage:               http://code.google.com/p/xhaskell-library/
Synopsis:               Replaces/Enhances Text.Regex. Implementing regular expression matching using Antimirov's partial derivatives.
Description:            Regex algorithm implementation using partial derivatives. The svn source also shipped with two other referential implementations, e.g. Thomspon NFA and Glushkov NFA. For more detail please check out http://code.google.com/p/xhaskell-library/
Category:               Text
Tested-With:            GHC == 9.6.6, GHC == 9.8.4, GHC == 9.10.1
Build-Type:             Simple

common common-deps
  build-depends:
    base          >= 4.16 && < 5.0,
    ghc-prim,
    parsec        >= 3.1  && < 3.2,
    mtl           >= 2.2  && < 2.4,
    containers    >= 0.6  && < 0.8,
    bytestring    >= 0.11 && < 0.13,
    deepseq       >= 1.4  && < 1.6,
    parallel      >= 3.2  && < 3.4,
    regex-base    >= 0.94 && < 0.95
  default-language: Haskell2010
  default-extensions:
    GADTs
    MultiParamTypeClasses
    FunctionalDependencies
    FlexibleInstances
    TypeSynonymInstances
    FlexibleContexts
  ghc-options:     -funbox-strict-fields

library
  import:           common-deps
  exposed-modules:  Text.Regex.PDeriv.ByteString
                    Text.Regex.PDeriv.ByteString.TwoPasses
                    Text.Regex.PDeriv.ByteString.RightToLeft
                    Text.Regex.PDeriv.ByteString.LeftToRight
                    Text.Regex.PDeriv.ByteString.LeftToRightS
                    Text.Regex.PDeriv.ByteString.LeftToRightD
                    Text.Regex.PDeriv.ByteString.Posix
                    Text.Regex.PDeriv.BitCode.Bit
                    Text.Regex.PDeriv.BitCode.ParseTree
                    Text.Regex.PDeriv.BitCode.Transduce
                    Text.Regex.PDeriv.String
                    Text.Regex.PDeriv.String.LeftToRightD
                    Text.Regex.PDeriv.Common
                    Text.Regex.PDeriv.Word
                    Text.Regex.PDeriv.ExtPattern
                    Text.Regex.PDeriv.IntPattern
                    Text.Regex.PDeriv.RE
                    Text.Regex.PDeriv.Parse
                    Text.Regex.PDeriv.Translate
                    Text.Regex.PDeriv.Nfa
                    Text.Regex.PDeriv.Pretty
                    Text.Regex.PDeriv.Dictionary
  hs-source-dirs:   src

test-suite test_pderiv
  import:           common-deps
  main-is:          BitTest.hs
  type:             exitcode-stdio-1.0
  build-depends:
    HUnit           >= 1.6  && < 1.7,
    tasty           >= 1.4  && < 1.6,
    tasty-hunit     >= 0.10 && < 0.11
  ghc-options:      -threaded
  hs-source-dirs:   test, src
     
